Updated directory, Added new work folder: testcase_creator

--- a/sample_project/index.html
+++ b/sample_project/index.html
@@ -63,4 +63,8 @@
                 type="video/mp4">
         Your browser does not support video.
     </video>
+
+    <!-- Buttons -->
+     <button id="count-button" onclick="incrementCount()">CLICK TO COUNT</button>
+     <button id="disp-button" onclick="displayCount()">DISPLAY</button>
 </html>
