--- a/testcase_creator/public/main.html
+++ b/testcase_creator/public/main.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>"Projects Main Page"</title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -21,8 +21,28 @@
             <section id="projects">
                 <h2>📙 Projects</h2>
                 <ul>
-                    <li><a href="main_sub_proj.html">Add a new project</a></li>
+                    <li><a href="#" onclick="openCreateProjWindow()">Add a new project</a></li>
                 </ul>
+                <!--Modal: Create Project-->
+                <div id="new-proj" class="modal-win">
+                    <!--Close Window-->
+                    <span class="close" onclick="closeModal()" title="Close Modal">&times;</span>
+
+                    <!--New Project Window Content-->
+                    <div id="new-proj-content" class="modal-new-proj">
+                        <h3>📋 Create a New Project</h3>
+                        <div class="text_input">
+                            <label>Title:</label>
+                            <input class="text_title" type="text">
+                            <label>Description:</label>
+                            <input class="text_desc" type="text">
+                        </div>
+                        <div class="modal-btn">
+                            <button id="create" class="btn">Create</button>
+                            <button id="cancel" class="btn">Cancel</button>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="guide">
                 <h2>🤔 Guide on how to use</h2>
@@ -40,4 +60,5 @@
             <p>This webpage is made for training by dolly</p>
         </footer>
     </body>
+    <script src="js/script.js"></script>
 </html>
