--- a/testcase_creator/public/main_sub_guide.html
+++ b/testcase_creator/public/main_sub_guide.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Guides Page</title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
