--- a/testcase_creator/public/login.html
+++ b/testcase_creator/public/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simple Test Case Creator</title>
-        <link rel="stylesheet" href="styles.css">   
+        <link href="css/styles.css" rel="stylesheet">   
     </head>
     <body>
         <main class="login">
